@@ -20,17 +20,42 @@
     </properties>
 
     <dependencies>
+
+        <!-- JSON (se mantiene) -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.11.0</version>
         </dependency>
 
+        <!-- MongoDB Driver (SE MANTIENE) -->
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongodb-driver-sync</artifactId>
             <version>4.11.1</version>
         </dependency>
+
+        <!-- PDFBox (PARA IMPRIMIR EL FORM A PDF) -->
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>3.0.6</version>
+        </dependency>
+
+        <!-- ImageIO avanzado (para capturar JFrame como imagen) -->
+        <!-- No es obligatorio, pero evita errores en Windows -->
+        <dependency>
+            <groupId>com.twelvemonkeys.imageio</groupId>
+            <artifactId>imageio-core</artifactId>
+            <version>3.10.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.twelvemonkeys.imageio</groupId>
+            <artifactId>imageio-jpeg</artifactId>
+            <version>3.10.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -53,18 +78,8 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.1.0</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
-                    </execution>
-                </executions>
                 <configuration>
                     <mainClass>ec.edu.espe.petshopinventorycontrol.view.LoginPetshop</mainClass>
-                    <arguments>
-                        <argument>--enable-preview</argument>
-                    </arguments>
                 </configuration>
             </plugin>
 
